Application deprecated. Use @kernel links